fixed dark mode css process bug, migrated avatar

--- a/packages/stack/src/global.css
+++ b/packages/stack/src/global.css
@@ -35,7 +35,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  [data-stack-theme="dark"] {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
 
